Mention the Mandelbrot part as a bonus

--- a/consignes.html
+++ b/consignes.html
@@ -87,7 +87,7 @@ exercice extrapolateExercise.py</li>
 
 
 
-<h1>Mandelbrot set, comparison python/C++</h1>
+<h1> - Bonus - Mandelbrot set, comparison python/C++</h1>
 
 <h2>Etape 0 : Definition of Mandelbrot set</h2>
 
